--- a/exercise 1.css
+++ b/exercise 1.css
@@ -2,7 +2,7 @@
 /*I didnt like how it looked so I centred everything*/
 
 .h1{
-    color: orange;
+    background-color: orange;
     text-align: center;
 }
 
