--- a/exercise 1.css
+++ b/exercise 1.css
@@ -4,6 +4,7 @@
 .h1{
     background-color: orange;
     text-align: center;
+    color:white;
 }
 
 .h2{
@@ -21,5 +22,6 @@
 
 body{
     margin: 2%;
+    background-color: black ;
 }
 
